move new-leader to macros/spawns

--- a/macros/spawns.cfg
+++ b/macros/spawns.cfg
@@ -104,81 +104,122 @@
 	[/event]
 #enddef
 
-#define GET_NEW_LEADER LEVEL SIDE
-      [have_unit]
-         side={SIDE}
-         canrecruit=0
-         level={LEVEL}
-      [/have_unit]
-   [then]
-      [store_unit]
-         [filter]
-            side={SIDE}
-            canrecruit=0
-            level={LEVEL}
-         [/filter]
-         variable=side{SIDE}_array
-         kill=no
-	 [message]
- 	     speaker=unit
- 	     message= _ "Yay! I'm the new leader!"
-	 [/message]
-      [/store_unit]
+#define BW_NEW_LEADER SIDE
+  [store_unit]
+    kill=no
+    variable=side_units
+    [filter]
+      side={SIDE}
+    [/filter]
+    [filter]
+      can xyz={SIDE}
+    [/filter]
+  [/store_unit]
+  {VARIABLE max_value 0}
+  [set_variable]
+    name=max_value
+    value=0
+  [/set_variable]
+  {VARIABLE max_index 0}
+  [set_variable]
+    name=max_index
+    value=0
+  [/set_variable]
+  {FOREACH side_units index}
+    [set_variable]
+      name=unit_xp
+      to_variable=side_units[$index].experience
+    [/set_variable]
+    [set_variable]
+      name=unit_hp
+      to_variable=side_units[$index].hitpoints
+    [/set_variable]
+    [set_variable]
+      name=unit_level
+      to_variable=side_units[$index].level
+    [/set_variable]
+    {VARIABLE unit_value $unit_xp}
+    {VARIABLE_OP unit_value add $unit_hp}
+    {VARIABLE_OP unit_level multiply 50}
+    {VARIABLE_OP unit_value add $unit_level}
+    [if]
+      [variable]
+        name=unit_hp
+        less_than=1
+      [/variable]
+      [then]
+        {VARIABLE unit_value 0}
+        [set_variable]
+          name=unit_value
+          value=0
+        [/set_variable]
+      [/then]
+    [/if]
+    [if]
+      [variable]
+        name=unit_value
+        greater_than=$max_value
+      [/variable]
+      [then]
+        {VARIABLE max_value $unit_value}
+        [set_variable]
+          name=max_index
+          value=$index
+        [/set_variable]
+      [/then]
+    [/if]
+  {NEXT index}
+  [if]
+    [variable]
+      name=max_value
+      greater_than=0
+    [/variable]
+    [then]
       [set_variable]
-         name=side{SIDE}_array[0].canrecruit
-         value=1
+        name=scrollx
+        to_variable=side_units[$max_index].x
       [/set_variable]
       [set_variable]
-         name=side{SIDE}_array[0].upkeep
-         value=free
+        name=scrolly
+        to_variable=side_units[$max_index].y
       [/set_variable]
-      [unstore_unit]
-         variable=side{SIDE}_array[0]
-      [/unstore_unit]
-   [/then]
-#enddef
-
-#define GET_BEST_LEADER SIDE
-   [if]
-      {GET_NEW_LEADER 4 {SIDE}}
-   [else]
-      [if]
-         {GET_NEW_LEADER 3 {SIDE}}
-      [else]
-         [if]
-            {GET_NEW_LEADER 2 {SIDE}}
-         [else]
-            [if]
-               {GET_NEW_LEADER 1 {SIDE}}
-            [else]
-               [if]
-                  {GET_NEW_LEADER 0 {SIDE}}
-               [/if]
-            [/else]
-            [/if]
-         [/else]
-         [/if]
-      [/else]
-      [/if]     
-   [/else]
-   [/if]
-   [clear_variable]
-      name=side{SIDE}_array
-   [/clear_variable]
-#enddef
-
-#define RESPAWN_LEADER SIDE
-   [event]
-      name=die
-      first_time_only=no
-      [filter]
-         canrecruit=1
-         side={SIDE}
-      [/filter]
+      [set_variable]
+        name=side_units[$max_index].canrecruit
+        value=yes
+      [/set_variable]
+      [set_variable]
+        name=side_units[$max_index].role
+        value="leader"
+      [/set_variable]
+      [scroll_to]
+        x=$scrollx
+        y=$scrolly
+      [/scroll_to]
+      [sound]
+        name=fanfare-short.wav
+      [/sound]
       [message]
-            speaker=unit
-            message= _ "Yay! A new leader!"
+        speaker=side_units[$max_index]
+	message="Follow me!"
+        green=255
+        size=20
       [/message]
-# .. // {GET_BEST_LEADER {SIDE}}
-   [/event]
+      [unstore_unit]
+        variable=side_units[$max_index]
+      [/unstore_unit]
+    [/then]
+  [/if]
 #enddef
+
+#define RENEWABLE_LEADERS SIDE
+[event]
+  name=die
+  first_time_only=no
+  [filter]
+    side={SIDE}
+    canrecruit=yes
+  [/filter]
+  {BW_NEW_LEADER {SIDE}}
+[/event]
+#enddef
+
