--- a/scenarios/3p_Orosh.cfg
+++ b/scenarios/3p_Orosh.cfg
@@ -1,125 +1,6 @@
-# 3p-Orosh v5.2 (updated for Wesnoth 1.10)
+# 3p-Orosh v5.4 (updated for Wesnoth 1.10)
 # by Dovolente - March 2011
 # by Zooko - November 2014
-
-#define BW_NEW_LEADER SIDE
-  [store_unit]
-    kill=no
-    variable=side_units
-    [filter]
-      side={SIDE}
-    [/filter]
-    [filter]
-      can xyz={SIDE}
-    [/filter]
-  [/store_unit]
-  {VARIABLE max_value 0}
-  [set_variable]
-    name=max_value
-    value=0
-  [/set_variable]
-  {VARIABLE max_index 0}
-  [set_variable]
-    name=max_index
-    value=0
-  [/set_variable]
-  {FOREACH side_units index}
-    [set_variable]
-      name=unit_xp
-      to_variable=side_units[$index].experience
-    [/set_variable]
-    [set_variable]
-      name=unit_hp
-      to_variable=side_units[$index].hitpoints
-    [/set_variable]
-    [set_variable]
-      name=unit_level
-      to_variable=side_units[$index].level
-    [/set_variable]
-    {VARIABLE unit_value $unit_xp}
-    {VARIABLE_OP unit_value add $unit_hp}
-    {VARIABLE_OP unit_level multiply 50}
-    {VARIABLE_OP unit_value add $unit_level}
-    [if]
-      [variable]
-        name=unit_hp
-        less_than=1
-      [/variable]
-      [then]
-        {VARIABLE unit_value 0}
-        [set_variable]
-          name=unit_value
-          value=0
-        [/set_variable]
-      [/then]
-    [/if]
-    [if]
-      [variable]
-        name=unit_value
-        greater_than=$max_value
-      [/variable]
-      [then]
-        {VARIABLE max_value $unit_value}
-        [set_variable]
-          name=max_index
-          value=$index
-        [/set_variable]
-      [/then]
-    [/if]
-  {NEXT index}
-  [if]
-    [variable]
-      name=max_value
-      greater_than=0
-    [/variable]
-    [then]
-      [set_variable]
-        name=scrollx
-        to_variable=side_units[$max_index].x
-      [/set_variable]
-      [set_variable]
-        name=scrolly
-        to_variable=side_units[$max_index].y
-      [/set_variable]
-      [set_variable]
-        name=side_units[$max_index].canrecruit
-        value=yes
-      [/set_variable]
-      [set_variable]
-        name=side_units[$max_index].role
-        value="leader"
-      [/set_variable]
-      [scroll_to]
-        x=$scrollx
-        y=$scrolly
-      [/scroll_to]
-      [sound]
-        name=fanfare-short.wav
-      [/sound]
-      [message]
-        speaker=side_units[$max_index]
-	message="Follow me!"
-        green=255
-        size=20
-      [/message]
-      [unstore_unit]
-        variable=side_units[$max_index]
-      [/unstore_unit]
-    [/then]
-  [/if]
-#enddef
-
-#define RENEWABLE_LEADERS SIDE
-[event]
-  name=die
-  first_time_only=no
-  [filter]
-    side={SIDE}
-    canrecruit=yes
-  [/filter]
-  {BW_NEW_LEADER {SIDE}}
-[/event]
-#enddef
 
 [multiplayer]
 	id=Dov_MP_Orosh
@@ -315,10 +196,10 @@
 				condition=win
 			[/objective]
 			[note]
-				description=_"At the start of your turn, any of your units may receive a bonus if they are within the castle walls and on the grassy area on your side of the shrine. v5.3.70"
+				description=_"At the start of your turn, any of your units may receive a bonus if they are within the castle walls and on the grassy area on your side of the shrine. v5.4.71"
 			[/note]
 			[note]
-				description=_"Bonuses:	a random trait (of 6)"
+				description=_"Bonuses: a random one of (strong, healthy, resilient), a random one of (intelligent, healthy, resilient), a random one of (dextrous, healthy, resilient), a random one of (quick, healthy, resilient)"
 			[/note]
 			[note]
 				description=_"See the <b>Dov MP Pack</b> thread on the official forums (multiplayer board) for info or to give feedback."
