each hex one powerup

--- a/macros/empowerments.cfg
+++ b/macros/empowerments.cfg
@@ -16,14 +16,86 @@
 #define GIVETRAIT TRAIT X Y
 #enddef
 
-#define EMPOWERMENT SIDE X Y
+#define INTELLIGENT_EMPOWERMENT SIDE X Y
 	[if]
 		[have_unit]
 			x,y={X},{Y}
 			side={SIDE}
 		[/have_unit]
 		[then]
-			{RANDOM 1..6}
+			{RANDOM 1..1}
+			[switch]
+				variable=random
+				[case]
+					value=1
+					[modify_unit]
+						[filter]
+							x,y={X},{Y}
+						[/filter]
+						{TRAIT_INTELLIGENT}
+					[/modify_unit]
+					{VARIABLE bonus_desc "intelligent"}
+				[/case]
+				[case]
+					value=2
+					[modify_unit]
+						[filter]
+							x,y={X},{Y}
+						[/filter]
+						{TRAIT_HEALTHY}
+					[/modify_unit]
+					{VARIABLE bonus_desc "healthy (int)"}
+				[/case]
+			[/switch]
+			{SET_LABEL {X} {Y} $bonus_desc}
+		[/then]
+	[/if]
+#enddef
+
+#define QUICK_EMPOWERMENT SIDE X Y
+	[if]
+		[have_unit]
+			x,y={X},{Y}
+			side={SIDE}
+		[/have_unit]
+		[then]
+			{RANDOM 1..1}
+			[switch]
+				variable=random
+				[case]
+					value=1
+					[modify_unit]
+						[filter]
+							x,y={X},{Y}
+						[/filter]
+						{TRAIT_QUICK}
+					[/modify_unit]
+					{VARIABLE bonus_desc "quick"}
+				[/case]
+				[case]
+					value=2
+					[modify_unit]
+						[filter]
+							x,y={X},{Y}
+						[/filter]
+						{TRAIT_HEALTHY}
+					[/modify_unit]
+					{VARIABLE bonus_desc "healthy (qui)"}
+				[/case]
+			[/switch]
+			{SET_LABEL {X} {Y} $bonus_desc}
+		[/then]
+	[/if]
+#enddef
+
+#define STRONG_EMPOWERMENT SIDE X Y
+	[if]
+		[have_unit]
+			x,y={X},{Y}
+			side={SIDE}
+		[/have_unit]
+		[then]
+			{RANDOM 1..1}
 			[switch]
 				variable=random
 				[case]
@@ -42,32 +114,28 @@
 						[filter]
 							x,y={X},{Y}
 						[/filter]
-						{TRAIT_QUICK}
+						{TRAIT_HEALTHY}
 					[/modify_unit]
-					{VARIABLE bonus_desc "quick"}
+					{VARIABLE bonus_desc "healthy (str)"}
 				[/case]
+			[/switch]
+			{SET_LABEL {X} {Y} $bonus_desc}
+		[/then]
+	[/if]
+#enddef
+
+#define DEXTROUS_EMPOWERMENT SIDE X Y
+	[if]
+		[have_unit]
+			x,y={X},{Y}
+			side={SIDE}
+		[/have_unit]
+		[then]
+			{RANDOM 1..1}
+			[switch]
+				variable=random
 				[case]
-					value=3
-					[modify_unit]
-						[filter]
-							x,y={X},{Y}
-						[/filter]
-						{TRAIT_INTELLIGENT}
-					[/modify_unit]
-					{VARIABLE bonus_desc "intelligent"}
-				[/case]
-				[case]
-					value=4
-					[modify_unit]
-						[filter]
-							x,y={X},{Y}
-						[/filter]
-						{TRAIT_RESILIENT}
-					[/modify_unit]
-					{VARIABLE bonus_desc "resilient"}
-				[/case]
-				[case]
-					value=5
+					value=1
 					[modify_unit]
 						[filter]
 							x,y={X},{Y}
@@ -77,14 +145,14 @@
 					{VARIABLE bonus_desc "dextrous"}
 				[/case]
 				[case]
-					value=6
+					value=2
 					[modify_unit]
 						[filter]
 							x,y={X},{Y}
 						[/filter]
 						{TRAIT_HEALTHY}
 					[/modify_unit]
-					{VARIABLE bonus_desc "healthy"}
+					{VARIABLE bonus_desc "healthy (dex)"}
 				[/case]
 			[/switch]
 			{SET_LABEL {X} {Y} $bonus_desc}
@@ -93,17 +161,17 @@
 #enddef
 
 #define CLEAR_BONUS_LABELS
-	{SET_LABEL 13 10 ""}
-	{SET_LABEL 14 9 ""}
-	{SET_LABEL 14 10 ""}
-	{SET_LABEL 15 10 ""}
-	{SET_LABEL 12 11 ""}
-	{SET_LABEL 12 12 ""}
-	{SET_LABEL 13 12 ""}
-	{SET_LABEL 13 13 ""}
-	{SET_LABEL 15 12 ""}
-	{SET_LABEL 15 13 ""}
-	{SET_LABEL 16 11 ""}
-	{SET_LABEL 16 12 ""}
+	{SET_LABEL 13 10 "(int)"}
+	{SET_LABEL 14 9 "(str)"}
+	{SET_LABEL 14 10 "(qui)"}
+	{SET_LABEL 15 10 "(dex)"}
+	{SET_LABEL 12 11 "(dex)"}
+	{SET_LABEL 12 12 "(str)"}
+	{SET_LABEL 13 12 "(qui)"}
+	{SET_LABEL 13 13 "(int)"}
+	{SET_LABEL 15 12 "(qui)"}
+	{SET_LABEL 15 13 "(dex)"}
+	{SET_LABEL 16 11 "(int)"}
+	{SET_LABEL 16 12 "(str)"}
 #enddef
 
