--- a/scenarios/3p_Orosh.cfg
+++ b/scenarios/3p_Orosh.cfg
@@ -196,10 +196,10 @@
 				condition=win
 			[/objective]
 			[note]
-				description=_"At the start of your turn, any of your units may receive a bonus if they are within the castle walls and on the grassy area on your side of the shrine. v5.4.71"
+				description=_"At the start of your turn, any of your units may receive a bonus if they are within the castle walls and on the grassy area on your side of the shrine. v5.4.74"
 			[/note]
 			[note]
-				description=_"Bonuses: a random one of (strong, healthy, resilient), a random one of (intelligent, healthy, resilient), a random one of (dextrous, healthy, resilient), a random one of (quick, healthy, resilient)"
+				description=_"Bonuses: strong, intelligent, dextrous, quick"
 			[/note]
 			[note]
 				description=_"See the <b>Dov MP Pack</b> thread on the official forums (multiplayer board) for info or to give feedback."
@@ -279,30 +279,30 @@
 		name=side 1 turn
 		first_time_only=no
 		{CLEAR_BONUS_LABELS}
-		{EMPOWERMENT 1 13 10}
-		{EMPOWERMENT 1 14 9}
-		{EMPOWERMENT 1 14 10}
-		{EMPOWERMENT 1 15 10}
+		{INTELLIGENT_EMPOWERMENT 1 13 10}
+		{STRONG_EMPOWERMENT 1 14 9}
+		{QUICK_EMPOWERMENT 1 14 10}
+		{DEXTROUS_EMPOWERMENT 1 15 10}
 	[/event]
 
 	[event]
 		name=side 2 turn
 		first_time_only=no
 		{CLEAR_BONUS_LABELS}
-		{EMPOWERMENT 2 12 11}
-		{EMPOWERMENT 2 12 12}
-		{EMPOWERMENT 2 13 12}
-		{EMPOWERMENT 2 13 13}
+		{DEXTROUS_EMPOWERMENT 2 12 11}
+		{STRONG_EMPOWERMENT 2 12 12}
+		{QUICK_EMPOWERMENT 2 13 12}
+		{INTELLIGENT_EMPOWERMENT 2 13 13}
 	[/event]
 
 	[event]
 		name=side 3 turn
 		first_time_only=no
 		{CLEAR_BONUS_LABELS}
-		{EMPOWERMENT 3 15 12}
-		{EMPOWERMENT 3 15 13}
-		{EMPOWERMENT 3 16 11}
-		{EMPOWERMENT 3 16 12}
+		{QUICK_EMPOWERMENT 3 15 12}
+		{DEXTROUS_EMPOWERMENT 3 15 13}
+		{INTELLIGENT_EMPOWERMENT 3 16 11}
+		{STRONG_EMPOWERMENT 3 16 12}
 	[/event]
 
 	{DOV_WAVE 1 (
