you can use any powerup grass

--- a/macros/empowerments.cfg
+++ b/macros/empowerments.cfg
@@ -16,11 +16,10 @@
 #define GIVETRAIT TRAIT X Y
 #enddef
 
-#define INTELLIGENT_EMPOWERMENT SIDE X Y
+#define INTELLIGENT_EMPOWERMENT X Y
 	[if]
 		[have_unit]
 			x,y={X},{Y}
-			side={SIDE}
 		[/have_unit]
 		[then]
 			{RANDOM 1..1}
@@ -36,27 +35,16 @@
 					[/modify_unit]
 					{VARIABLE bonus_desc "intelligent"}
 				[/case]
-				[case]
-					value=2
-					[modify_unit]
-						[filter]
-							x,y={X},{Y}
-						[/filter]
-						{TRAIT_HEALTHY}
-					[/modify_unit]
-					{VARIABLE bonus_desc "healthy (int)"}
-				[/case]
 			[/switch]
 			{SET_LABEL {X} {Y} $bonus_desc}
 		[/then]
 	[/if]
 #enddef
 
-#define QUICK_EMPOWERMENT SIDE X Y
+#define QUICK_EMPOWERMENT X Y
 	[if]
 		[have_unit]
 			x,y={X},{Y}
-			side={SIDE}
 		[/have_unit]
 		[then]
 			{RANDOM 1..1}
@@ -72,27 +60,16 @@
 					[/modify_unit]
 					{VARIABLE bonus_desc "quick"}
 				[/case]
-				[case]
-					value=2
-					[modify_unit]
-						[filter]
-							x,y={X},{Y}
-						[/filter]
-						{TRAIT_HEALTHY}
-					[/modify_unit]
-					{VARIABLE bonus_desc "healthy (qui)"}
-				[/case]
 			[/switch]
 			{SET_LABEL {X} {Y} $bonus_desc}
 		[/then]
 	[/if]
 #enddef
 
-#define STRONG_EMPOWERMENT SIDE X Y
+#define STRONG_EMPOWERMENT X Y
 	[if]
 		[have_unit]
 			x,y={X},{Y}
-			side={SIDE}
 		[/have_unit]
 		[then]
 			{RANDOM 1..1}
@@ -108,27 +85,16 @@
 					[/modify_unit]
 					{VARIABLE bonus_desc "strong"}
 				[/case]
-				[case]
-					value=2
-					[modify_unit]
-						[filter]
-							x,y={X},{Y}
-						[/filter]
-						{TRAIT_HEALTHY}
-					[/modify_unit]
-					{VARIABLE bonus_desc "healthy (str)"}
-				[/case]
 			[/switch]
 			{SET_LABEL {X} {Y} $bonus_desc}
 		[/then]
 	[/if]
 #enddef
 
-#define DEXTROUS_EMPOWERMENT SIDE X Y
+#define DEXTROUS_EMPOWERMENT X Y
 	[if]
 		[have_unit]
 			x,y={X},{Y}
-			side={SIDE}
 		[/have_unit]
 		[then]
 			{RANDOM 1..1}
@@ -143,16 +109,6 @@
 						{TRAIT_DEXTROUS}
 					[/modify_unit]
 					{VARIABLE bonus_desc "dextrous"}
-				[/case]
-				[case]
-					value=2
-					[modify_unit]
-						[filter]
-							x,y={X},{Y}
-						[/filter]
-						{TRAIT_HEALTHY}
-					[/modify_unit]
-					{VARIABLE bonus_desc "healthy (dex)"}
 				[/case]
 			[/switch]
 			{SET_LABEL {X} {Y} $bonus_desc}
