more better display of state

--- a/macros/spawns.cfg
+++ b/macros/spawns.cfg
@@ -97,8 +97,14 @@
 		[/and]
 		[then]
 			{WAVE_ACTIONS}
-			{SET_LABEL 14 0 "$next_wave_label"}
-			{SET_LABEL 14 21 "$next_wave_label"}
+			{SET_LABEL 5 2 "Turn: $next_wave_turn"}
+			{SET_LABEL 6 2 "$next_wave_label"}
+			{SET_LABEL 21 2 "Turn: $next_wave_turn"}
+			{SET_LABEL 22 2 "$next_wave_label"}
+			{SET_LABEL 5 20 "Turn: $next_wave_turn"}
+			{SET_LABEL 6 20 "$next_wave_label"}
+			{SET_LABEL 21 20 "Turn: $next_wave_turn"}
+			{SET_LABEL 22 20 "$next_wave_label"}
 		[/then]
 		[/if]
 	[/event]
@@ -110,9 +116,6 @@
     variable=side_units
     [filter]
       side={SIDE}
-    [/filter]
-    [filter]
-      can xyz={SIDE}
     [/filter]
   [/store_unit]
   {VARIABLE max_value 0}
@@ -140,7 +143,7 @@
     [/set_variable]
     {VARIABLE unit_value $unit_xp}
     {VARIABLE_OP unit_value add $unit_hp}
-    {VARIABLE_OP unit_level multiply 50}
+    {VARIABLE_OP unit_level multiply .50}
     {VARIABLE_OP unit_value add $unit_level}
     [if]
       [variable]
@@ -211,15 +214,36 @@
   [/if]
 #enddef
 
-#define RENEWABLE_LEADERS SIDE
+#define BW_LEADER_EVENTS
 [event]
-  name=die
+  name=side turn
   first_time_only=no
-  [filter]
-    side={SIDE}
-    canrecruit=yes
-  [/filter]
-  {BW_NEW_LEADER {SIDE}}
+  [if]
+    [variable]
+      name=side_number
+      less_than=4
+    [/variable]
+    [then]
+      [if]
+        [variable]
+          name=endgame
+          numerical_equals=0
+        [/variable]
+        [then]
+          [if]
+            [not]
+              [have_unit]
+                side=$side_number
+                role="leader"
+              [/have_unit]
+            [/not]
+            [then]
+              {BW_NEW_LEADER $side_number}
+            [/then]
+          [/if]
+        [/then]
+      [/if]
+    [/then]
+  [/if]
 [/event]
 #enddef
-
