--- a/scenarios/3p_Orosh.cfg
+++ b/scenarios/3p_Orosh.cfg
@@ -1,4 +1,4 @@
-# 3p-Orosh v5.4 (updated for Wesnoth 1.10)
+# 3p-Orosh v5.6 (updated for Wesnoth 1.12)
 # by Dovolente - March 2011
 # by Zooko - November 2014
 
@@ -30,39 +30,94 @@
 		side=1
 		canrecruit=yes
 		controller=human
-		color_lock=true
-# 		[ai]
-# 			caution=1.5
-# 			grouping="offensive"
-# 			[goal]
-# 				name=target_location
-# 				[criteria] #NOTE: this is a SLF, because we're targeting a location
-# 					x,y=13,10
-# 				[/criteria]
-# 				value=500000
-# 			[/goal]
-# 			[goal]
-# 				name=target_location
-# 				[criteria] #NOTE: this is a SLF, because we're targeting a location
-# 					x,y=14,9
-# 				[/criteria]
-# 				value=500000
-# 			[/goal]
-# 			[goal]
-# 				name=target_location
-# 				[criteria] #NOTE: this is a SLF, because we're targeting a location
-# 					x,y=14,10
-# 				[/criteria]
-# 				value=500000
-# 			[/goal]
-# 			[goal]
-# 				name=target_location
-# 				[criteria] #NOTE: this is a SLF, because we're targeting a location
-# 					x,y=15,10
-# 				[/criteria]
-# 				value=500000
-# 			[/goal]
-# 	        [/ai]
+ 		[ai]
+ 			caution=1.5
+ 			grouping="offensive"
+ 			[goal]
+ 				name=target_location
+ 				[criteria] #NOTE: this is a SLF, because we're targeting a location
+ 					x,y=13,10
+ 				[/criteria]
+ 				value=500000
+ 			[/goal]
+ 			[goal]
+ 				name=target_location
+ 				[criteria] #NOTE: this is a SLF, because we're targeting a location
+ 					x,y=14,9
+ 				[/criteria]
+ 				value=500000
+ 			[/goal]
+ 			[goal]
+ 				name=target_location
+ 				[criteria] #NOTE: this is a SLF, because we're targeting a location
+ 					x,y=14,10
+ 				[/criteria]
+ 				value=500000
+ 			[/goal]
+ 			[goal]
+ 				name=target_location
+ 				[criteria] #NOTE: this is a SLF, because we're targeting a location
+ 					x,y=15,10
+ 				[/criteria]
+ 				value=500000
+			[/goal]
+ 			[goal]
+ 				name=target_location
+ 				[criteria] #NOTE: this is a SLF, because we're targeting a location
+ 					x,y=12,11
+ 				[/criteria]
+ 				value=500000
+ 			[/goal]
+ 			[goal]
+ 				name=target_location
+ 				[criteria] #NOTE: this is a SLF, because we're targeting a location
+ 					x,y=12,12
+ 				[/criteria]
+ 				value=500000
+ 			[/goal]
+ 			[goal]
+ 				name=target_location
+ 				[criteria] #NOTE: this is a SLF, because we're targeting a location
+ 					x,y=13,12
+ 				[/criteria]
+ 				value=500000
+ 			[/goal]
+ 			[goal]
+ 				name=target_location
+ 				[criteria] #NOTE: this is a SLF, because we're targeting a location
+ 					x,y=13,13
+ 				[/criteria]
+ 				value=500000
+ 			[/goal]
+ 			[goal]
+ 				name=target_location
+ 				[criteria] #NOTE: this is a SLF, because we're targeting a location
+ 					x,y=15,12
+ 				[/criteria]
+ 				value=500000
+ 			[/goal]
+ 			[goal]
+ 				name=target_location
+ 				[criteria] #NOTE: this is a SLF, because we're targeting a location
+ 					x,y=16,11
+ 				[/criteria]
+ 				value=500000
+ 			[/goal]
+ 			[goal]
+ 				name=target_location
+ 				[criteria] #NOTE: this is a SLF, because we're targeting a location
+ 					x,y=16,12
+ 				[/criteria]
+ 				value=500000
+ 			[/goal]
+ 			[goal]
+ 				name=target_location
+ 				[criteria] #NOTE: this is a SLF, because we're targeting a location
+ 					x,y=15,13
+ 				[/criteria]
+ 				value=500000
+ 			[/goal]
+ 	        [/ai]
 		team_name=defenders
 		gold=75
 		color=purple
@@ -76,39 +131,94 @@
 		side=2
 		canrecruit=yes
 		controller=human 
-# 		[ai]
-# 			aggression=-2.0
-# 			caution=1.5
-# 			grouping="offensive"
-# 			[goal]
-# 				name=target_location
-# 				[criteria] #NOTE: this is a SLF, because we're targeting a location
-# 					x,y=12,11
-# 				[/criteria]
-# 				value=500000
-# 			[/goal]
-# 			[goal]
-# 				name=target_location
-# 				[criteria] #NOTE: this is a SLF, because we're targeting a location
-# 					x,y=12,12
-# 				[/criteria]
-# 				value=500000
-# 			[/goal]
-# 			[goal]
-# 				name=target_location
-# 				[criteria] #NOTE: this is a SLF, because we're targeting a location
-# 					x,y=13,12
-# 				[/criteria]
-# 				value=500000
-# 			[/goal]
-# 			[goal]
-# 				name=target_location
-# 				[criteria] #NOTE: this is a SLF, because we're targeting a location
-# 					x,y=13,13
-# 				[/criteria]
-# 				value=500000
-# 			[/goal]
-# 		  [/ai]
+ 		[ai]
+ 			caution=1.5
+ 			grouping="offensive"
+ 			[goal]
+ 				name=target_location
+ 				[criteria] #NOTE: this is a SLF, because we're targeting a location
+ 					x,y=13,10
+ 				[/criteria]
+ 				value=500000
+ 			[/goal]
+ 			[goal]
+ 				name=target_location
+ 				[criteria] #NOTE: this is a SLF, because we're targeting a location
+ 					x,y=14,9
+ 				[/criteria]
+ 				value=500000
+ 			[/goal]
+ 			[goal]
+ 				name=target_location
+ 				[criteria] #NOTE: this is a SLF, because we're targeting a location
+ 					x,y=14,10
+ 				[/criteria]
+ 				value=500000
+ 			[/goal]
+ 			[goal]
+ 				name=target_location
+ 				[criteria] #NOTE: this is a SLF, because we're targeting a location
+ 					x,y=15,10
+ 				[/criteria]
+ 				value=500000
+			[/goal]
+ 			[goal]
+ 				name=target_location
+ 				[criteria] #NOTE: this is a SLF, because we're targeting a location
+ 					x,y=12,11
+ 				[/criteria]
+ 				value=500000
+ 			[/goal]
+ 			[goal]
+ 				name=target_location
+ 				[criteria] #NOTE: this is a SLF, because we're targeting a location
+ 					x,y=12,12
+ 				[/criteria]
+ 				value=500000
+ 			[/goal]
+ 			[goal]
+ 				name=target_location
+ 				[criteria] #NOTE: this is a SLF, because we're targeting a location
+ 					x,y=13,12
+ 				[/criteria]
+ 				value=500000
+ 			[/goal]
+ 			[goal]
+ 				name=target_location
+ 				[criteria] #NOTE: this is a SLF, because we're targeting a location
+ 					x,y=13,13
+ 				[/criteria]
+ 				value=500000
+ 			[/goal]
+ 			[goal]
+ 				name=target_location
+ 				[criteria] #NOTE: this is a SLF, because we're targeting a location
+ 					x,y=15,12
+ 				[/criteria]
+ 				value=500000
+ 			[/goal]
+ 			[goal]
+ 				name=target_location
+ 				[criteria] #NOTE: this is a SLF, because we're targeting a location
+ 					x,y=16,11
+ 				[/criteria]
+ 				value=500000
+ 			[/goal]
+ 			[goal]
+ 				name=target_location
+ 				[criteria] #NOTE: this is a SLF, because we're targeting a location
+ 					x,y=16,12
+ 				[/criteria]
+ 				value=500000
+ 			[/goal]
+ 			[goal]
+ 				name=target_location
+ 				[criteria] #NOTE: this is a SLF, because we're targeting a location
+ 					x,y=15,13
+ 				[/criteria]
+ 				value=500000
+ 			[/goal]
+ 	        [/ai]
 		team_name=defenders
 		gold=75
 		color=blue
@@ -122,39 +232,94 @@
 		side=3
 		canrecruit=yes
 		controller=human
-# 		[ai]
-# 			aggression=-2.0
-# 			caution=1.5
-# 			grouping="offensive"
-# 			[goal]
-# 				name=target_location
-# 				[criteria] #NOTE: this is a SLF, because we're targeting a location
-# 					x,y=15,12
-# 				[/criteria]
-# 				value=500000
-# 			[/goal]
-# 			[goal]
-# 				name=target_location
-# 				[criteria] #NOTE: this is a SLF, because we're targeting a location
-# 					x,y=16,11
-# 				[/criteria]
-# 				value=500000
-# 			[/goal]
-# 			[goal]
-# 				name=target_location
-# 				[criteria] #NOTE: this is a SLF, because we're targeting a location
-# 					x,y=16,12
-# 				[/criteria]
-# 				value=500000
-# 			[/goal]
-# 			[goal]
-# 				name=target_location
-# 				[criteria] #NOTE: this is a SLF, because we're targeting a location
-# 					x,y=15,13
-# 				[/criteria]
-# 				value=500000
-# 			[/goal]
-# 		  [/ai]
+ 		[ai]
+ 			caution=1.5
+ 			grouping="offensive"
+ 			[goal]
+ 				name=target_location
+ 				[criteria] #NOTE: this is a SLF, because we're targeting a location
+ 					x,y=13,10
+ 				[/criteria]
+ 				value=500000
+ 			[/goal]
+ 			[goal]
+ 				name=target_location
+ 				[criteria] #NOTE: this is a SLF, because we're targeting a location
+ 					x,y=14,9
+ 				[/criteria]
+ 				value=500000
+ 			[/goal]
+ 			[goal]
+ 				name=target_location
+ 				[criteria] #NOTE: this is a SLF, because we're targeting a location
+ 					x,y=14,10
+ 				[/criteria]
+ 				value=500000
+ 			[/goal]
+ 			[goal]
+ 				name=target_location
+ 				[criteria] #NOTE: this is a SLF, because we're targeting a location
+ 					x,y=15,10
+ 				[/criteria]
+ 				value=500000
+			[/goal]
+ 			[goal]
+ 				name=target_location
+ 				[criteria] #NOTE: this is a SLF, because we're targeting a location
+ 					x,y=12,11
+ 				[/criteria]
+ 				value=500000
+ 			[/goal]
+ 			[goal]
+ 				name=target_location
+ 				[criteria] #NOTE: this is a SLF, because we're targeting a location
+ 					x,y=12,12
+ 				[/criteria]
+ 				value=500000
+ 			[/goal]
+ 			[goal]
+ 				name=target_location
+ 				[criteria] #NOTE: this is a SLF, because we're targeting a location
+ 					x,y=13,12
+ 				[/criteria]
+ 				value=500000
+ 			[/goal]
+ 			[goal]
+ 				name=target_location
+ 				[criteria] #NOTE: this is a SLF, because we're targeting a location
+ 					x,y=13,13
+ 				[/criteria]
+ 				value=500000
+ 			[/goal]
+ 			[goal]
+ 				name=target_location
+ 				[criteria] #NOTE: this is a SLF, because we're targeting a location
+ 					x,y=15,12
+ 				[/criteria]
+ 				value=500000
+ 			[/goal]
+ 			[goal]
+ 				name=target_location
+ 				[criteria] #NOTE: this is a SLF, because we're targeting a location
+ 					x,y=16,11
+ 				[/criteria]
+ 				value=500000
+ 			[/goal]
+ 			[goal]
+ 				name=target_location
+ 				[criteria] #NOTE: this is a SLF, because we're targeting a location
+ 					x,y=16,12
+ 				[/criteria]
+ 				value=500000
+ 			[/goal]
+ 			[goal]
+ 				name=target_location
+ 				[criteria] #NOTE: this is a SLF, because we're targeting a location
+ 					x,y=15,13
+ 				[/criteria]
+ 				value=500000
+ 			[/goal]
+ 	        [/ai]
 		team_name=defenders
 		gold=75
 		color=green
@@ -185,7 +350,6 @@
 		{MODIFY_AI_ADD_SIMPLE_ASPECT 2 aggression * -3.0}
 		{MODIFY_AI_ADD_SIMPLE_ASPECT 3 aggression * -3.0}
 
-		{PLACE_IMAGE "scenery/temple1.png" 14 11}
 		{PLACE_IMAGE "items/scarecrow.png" 7 6}
 		{PLACE_IMAGE "items/scarecrow.png" 12 19}
 		{PLACE_IMAGE "items/scarecrow.png" 23 9}
@@ -196,7 +360,7 @@
 				condition=win
 			[/objective]
 			[note]
-				description=_"At the start of your turn, any of your units may receive a bonus if they are within the castle walls and on the grassy area on your side of the shrine. v5.4.75"
+				description=_"At the start of your turn, any of your units may receive a bonus if they are within the castle walls and on the grassy area on your side of the shrine. v5.6.94"
 			[/note]
 			[note]
 				description=_"Bonuses: strong, intelligent, dextrous, quick"
@@ -270,13 +434,26 @@
 		[/message]
 	[/event]
 
-	{RENEWABLE_LEADERS 1}
-	{RENEWABLE_LEADERS 2}
-	{RENEWABLE_LEADERS 3}
+	{BW_LEADER_EVENTS}
 
+	[event]
+		name=side 1 turn refresh
+		id=side_1_turn_refresh
+		first_time_only=no
+		[set_variable]
+			name=countdown
+			value=$next_wave_turn
+		[/set_variable]
+		[set_variable]
+			name=countdown
+			sub=$turn_number
+		[/set_variable]
+		{SET_LABEL 14 11 "$countdown"}
+	[/event]
 
 	[event]
 		name=side 1 turn
+		id=side_1_turn
 		first_time_only=no
 		{CLEAR_BONUS_LABELS}
 		{INTELLIGENT_EMPOWERMENT 13 10}
@@ -287,6 +464,7 @@
 
 	[event]
 		name=side 2 turn
+		id=side_2_turn
 		first_time_only=no
 		{CLEAR_BONUS_LABELS}
 		{DEXTROUS_EMPOWERMENT 12 11}
@@ -297,6 +475,7 @@
 
 	[event]
 		name=side 3 turn
+		id=side_3_turn
 		first_time_only=no
 		{CLEAR_BONUS_LABELS}
 		{QUICK_EMPOWERMENT 15 12}
@@ -306,59 +485,68 @@
 	[/event]
 
 	{DOV_WAVE 1 (
-		{VARIABLE next_wave_label "Turn 2: Peasants and Thugs"}
+		{VARIABLE next_wave_turn 2}
+		{VARIABLE next_wave_label "Peasants and Thugs"}
 	)}
 
 	{DOV_WAVE 2 (
 		{LAND_A_2 "Thug"}{LAND_B_3 "Peasant"}
-		{VARIABLE next_wave_label "Turn 5: Ghosts"}
+		{VARIABLE next_wave_turn 5}
+		{VARIABLE next_wave_label "Ghosts"}
 	)}
 
 	{DOV_WAVE 5 (
 		{BORDER_2 "Ghost"}
-		{VARIABLE next_wave_label "Turn 7: Walking Corpses"}
+		{VARIABLE next_wave_turn 7}
+		{VARIABLE next_wave_label "Walking Corpses"}
 	)}
 
 	{DOV_WAVE 7 (
 		{LAND_A_2 "Walking Corpse"}
 		{LAND_B_1 "Walking Corpse"}
-		{VARIABLE next_wave_label "Turn 11: Loyalists"}
+		{VARIABLE next_wave_turn 10}
+		{VARIABLE next_wave_label "Loyalists"}
 	)}
 
-	{DOV_WAVE 11 (
+	{DOV_WAVE 10 (
 		{LAND_B_1 "Mage"}
 		{LAND_B_2 "Spearman"}
 		{LAND_A_2 "Cavalryman"}
-		{VARIABLE next_wave_label "Turn 14: Northerners"}
+		{VARIABLE next_wave_turn 13}
+		{VARIABLE next_wave_label "Northerners"}
 	)}
 
-	{DOV_WAVE 14 (
+	{DOV_WAVE 13 (
 		{LAND_B_2 "Orcish Archer"}
 		{LAND_A_1 "Troll"}
 		{LAND_A_2 "Wolf Rider"}
-		{VARIABLE next_wave_label "Turn 18: Elves"}
+		{VARIABLE next_wave_turn 17}
+		{VARIABLE next_wave_label "Elves"}
 	)}
 
-	{DOV_WAVE 18 (
+	{DOV_WAVE 17 (
 		{LAND_B_1 "Elvish Captain"}
 		{LAND_B_2 "Elvish Archer"}
 		{LAND_A_2 "Wose"}
 		{BORDER_2 "Merman Hunter"}
-		{VARIABLE next_wave_label "Turn 22: Ogres and Netcasters"}
+		{VARIABLE next_wave_turn 20}
+		{VARIABLE next_wave_label "Ogres and Netcasters"}
 	)}
 
-	{DOV_WAVE 22 (
+	{DOV_WAVE 20 (
 		{LAND_A_3 "Young Ogre"}
 		{LAND_B_2 "Ogre"}
 		{BORDER_1 "Merman Netcaster"}
-		{VARIABLE next_wave_label "Turn 24: Bats and Shadows"}
+		{VARIABLE next_wave_turn 24}
+		{VARIABLE next_wave_label "Bats and Shadows"}
 	)}
 
 	{DOV_WAVE 24 (
 		{BORDER_2 "Blood Bat"}
 		{LAND_A_3 "Vampire Bat"}
 		{LAND_B_2 "Shadow"}
-		{VARIABLE next_wave_label "Turn 27: Drakes"}
+		{VARIABLE next_wave_turn 27}
+		{VARIABLE next_wave_label "Drakes"}
 	)}
 
 	{DOV_WAVE 27 (
@@ -366,28 +554,32 @@
 		{LAND_B_1 "Drake Warrior"}
 		{LAND_B_2 "Drake Clasher"}
 		{BORDER_1 "Drake Burner"}
-		{VARIABLE next_wave_label "Turn 31: Knalgans"}
+		{VARIABLE next_wave_turn 31}
+		{VARIABLE next_wave_label "Knalgans"}
 	)}
 
 	{DOV_WAVE 31 (
 		{BORDER_2 "Gryphon Rider"}
 		{LAND_B_2 "Dwarvish Berserker"}
 		{LAND_A_2 "Dwarvish Thunderguard"}
-		{VARIABLE next_wave_label "Turn 34: Knights"}
+		{VARIABLE next_wave_turn 34}
+		{VARIABLE next_wave_label "Knights"}
 	)}
 
 	{DOV_WAVE 34 (
 		{LAND_B_2 "Knight"}
 		{LAND_B_1 "Paladin"}
 		{LAND_A_2 "Lancer"}
-		{VARIABLE next_wave_label "Turn 36: Mages and Sorcerers"}
+		{VARIABLE next_wave_turn 36}
+		{VARIABLE next_wave_label "Mages and Sorcerers"}
 	)}
 
 	{DOV_WAVE 36 (
 		{LAND_B_3 "Red Mage"}
 		{LAND_A_2 "Dark Sorcerer"}
 		{LAND_A_1 "Silver Mage"}
-		{VARIABLE next_wave_label "Turn 39: Saurians"}
+		{VARIABLE next_wave_turn 39}
+		{VARIABLE next_wave_label "Saurians"}
 	)}
 
 	{DOV_WAVE 39 (
@@ -398,7 +590,8 @@
 		{LAND_B_1 "Saurian Oracle"}
 		{LAND_B_2 "Saurian Soothsayer"}
 		{LAND_B_3 "Saurian Ambusher"}
-		{VARIABLE next_wave_label "Turn 40: Assassins"}
+		{VARIABLE next_wave_turn 40}
+		{VARIABLE next_wave_label "Assassins"}
 	)}
 
 	{DOV_WAVE 40 (
@@ -408,7 +601,8 @@
 		{LAND_B_1 "Assassin"}
 		{LAND_B_2 "Assassin"}
 		{LAND_B_3 "Assassin"}
-		{VARIABLE next_wave_label "Turn 44: WIN!"}
+		{VARIABLE next_wave_turn 44}
+		{VARIABLE next_wave_label "WIN!"}
 	)}
 
 [/multiplayer]
