--- a/_main.cfg
+++ b/_main.cfg
@@ -1,23 +1,23 @@
 #[textdomain]
-#   name="wesnoth-Zooko-addon"
-#   path="data/add-ons/Zooko-addon/translations/"
+#   name="wesnoth-orosh"
+#   path="data/add-ons/orosh/translations/"
 #[/textdomain]
 
 #ifdef MULTIPLAYER
-	#{~add-ons/Zooko-addon/macros/persistent_data.cfg}
-	{~add-ons/Zooko-addon/macros/item_discard.cfg}
-	{~add-ons/Zooko-addon/macros/items.cfg}
-	{~add-ons/Zooko-addon/macros/empowerments.cfg}
-	{~add-ons/Zooko-addon/macros/spawns.cfg}
-	{~add-ons/Zooko-addon/macros/item_drops.cfg}
-	{~add-ons/Zooko-addon/macros/xp.cfg}
-	{~add-ons/Zooko-addon/macros/settlers.cfg}
-	{~add-ons/Zooko-addon/macros/shops.cfg}
+	#{~add-ons/orosh/macros/persistent_data.cfg}
+	{~add-ons/orosh/macros/item_discard.cfg}
+	{~add-ons/orosh/macros/items.cfg}
+	{~add-ons/orosh/macros/empowerments.cfg}
+	{~add-ons/orosh/macros/spawns.cfg}
+	{~add-ons/orosh/macros/item_drops.cfg}
+	{~add-ons/orosh/macros/xp.cfg}
+	{~add-ons/orosh/macros/settlers.cfg}
+	{~add-ons/orosh/macros/shops.cfg}
 
-	{~add-ons/Zooko-addon/scenarios/3p_Orosh.cfg}
+	{~add-ons/orosh/scenarios/3p_Orosh.cfg}
 
-	{~add-ons/Zooko-addon/mods/drops_mod.cfg}
-	{~add-ons/Zooko-addon/mods/xp_mod.cfg}
-	{~add-ons/Zooko-addon/mods/settlers_mod.cfg}
-	{~add-ons/Zooko-addon/mods/shops_mod.cfg}
+	{~add-ons/orosh/mods/drops_mod.cfg}
+	{~add-ons/orosh/mods/xp_mod.cfg}
+	{~add-ons/orosh/mods/settlers_mod.cfg}
+	{~add-ons/orosh/mods/shops_mod.cfg}
 #endif
