--- a/macros/items.cfg
+++ b/macros/items.cfg
@@ -1,4 +1,4 @@
-#textdomain wesnoth-Zooko-addon
+#textdomain wesnoth-orosh
 
 #0 the Crystal Diadem of Allang 	10	leadership, heal +4
 #1 the Silver Ring of Tessolos		10	cure, heal+8
