--- a/macros/persistent_data.cfg
+++ b/macros/persistent_data.cfg
@@ -3,7 +3,7 @@
 
 #define SAVE_VAR SCENARIO SIDE LOCAL GLOBAL
 	[set_global_variable]
-		namespace=Zooko-addon.{SCENARIO}
+		namespace=orosh.{SCENARIO}
 		side={SIDE}
 		from_local={LOCAL}
 		to_global={GLOBAL}
@@ -13,7 +13,7 @@
 
 #define LOAD_VAR SCENARIO SIDE LOCAL GLOBAL
 	[get_global_variable]
-		namespace=Zooko-addon.{SCENARIO}
+		namespace=orosh.{SCENARIO}
 		side={SIDE}
 		from_global={GLOBAL}
 		to_local={LOCAL}
