--- a/macros/settlers.cfg
+++ b/macros/settlers.cfg
@@ -1,4 +1,4 @@
-#textdomain wesnoth-Zooko-addon
+#textdomain wesnoth-orosh
 
 #define SETTLERS_CONVERT_TERRAIN TYPES REPLACEMENT
 	[store_map_dimensions]
