--- a/macros/shops.cfg
+++ b/macros/shops.cfg
@@ -1,4 +1,4 @@
-#textdomain wesnoth-Zooko-addon
+#textdomain wesnoth-orosh
 
 #define HALO_ON_ADVANCE
 #adds a halo for units who level and have the Phial or Shroud
