--- a/scenarios/3p_Orosh.cfg
+++ b/scenarios/3p_Orosh.cfg
@@ -1,6 +1,6 @@
 # 3p-Orosh v5.6 (updated for Wesnoth 1.12)
 # by Dovolente - March 2011
-# by Zooko - November 2014
+# by orosh 2014
 
 [multiplayer]
 	id=Dov_MP_Orosh
@@ -17,7 +17,7 @@
 		[/unit]
 	#enddef
 
-	map_data="{~add-ons/Zooko-addon/maps/orosh.map}"
+	map_data="{~add-ons/orosh/maps/orosh.map}"
 	description= _ "A 3-Player Survival Scenario. Work together to protect a powerful shrine from hordes of invaders. Win by surviving until turn 44. At the start of their turn, a unit on the right hexes gets a trait."
 	turns="-1"
 	victory_when_enemies_defeated=no
