--- a/orosh/macros/empowerments.cfg
+++ b/orosh/macros/empowerments.cfg
@@ -1,5 +1,33 @@
 #textdomain wesnoth-orosh
 
+#define DOV_TRAIT_EXPERT
+[trait]
+	id=expert
+	male_name= _ "expert"
+	female_name= _ "female^expert"
+	[effect]
+		apply_to=attack
+		increase_attacks=1
+	[/effect]
+	[effect]
+		apply_to=attack
+		increase_damage=-10%
+	[/effect]
+[/trait]
+#enddef
+
+#define DOV_TRAIT_POWERFUL
+[trait]
+	id=heroic
+	male_name= _ "powerful"
+	female_name= _ "female^powerful"
+	[effect]
+		apply_to=attack
+		increase_damage=1
+	[/effect]
+[/trait]
+#enddef
+
 #define DOV_EFFECT APPLICATION ADJUSTMENT ARG X Y
 	[object]
 	silent=yes
@@ -16,26 +44,55 @@
 #define GIVETRAIT TRAIT X Y
 #enddef
 
+#define EXPERT_EMPOWERMENT X Y
+	[if]
+		[have_unit]
+			x,y={X},{Y}
+		[/have_unit]
+		[then]
+			[modify_unit]
+				[filter]
+					x,y={X},{Y}
+				[/filter]
+				{DOV_TRAIT_EXPERT}
+			[/modify_unit]
+			{VARIABLE bonus_desc "expert"}
+			{SET_LABEL {X} {Y} $bonus_desc}
+		[/then]
+	[/if]
+#enddef
+
+#define POWERFUL_EMPOWERMENT X Y
+	[if]
+		[have_unit]
+			x,y={X},{Y}
+		[/have_unit]
+		[then]
+			[modify_unit]
+				[filter]
+					x,y={X},{Y}
+				[/filter]
+				{DOV_TRAIT_POWERFUL}
+			[/modify_unit]
+			{VARIABLE bonus_desc "powerful"}
+			{SET_LABEL {X} {Y} $bonus_desc}
+		[/then]
+	[/if]
+#enddef
+
 #define INTELLIGENT_EMPOWERMENT X Y
 	[if]
 		[have_unit]
 			x,y={X},{Y}
 		[/have_unit]
 		[then]
-			{RANDOM 1..1}
-			[switch]
-				variable=random
-				[case]
-					value=1
-					[modify_unit]
-						[filter]
-							x,y={X},{Y}
-						[/filter]
-						{TRAIT_INTELLIGENT}
-					[/modify_unit]
-					{VARIABLE bonus_desc "intelligent"}
-				[/case]
-			[/switch]
+			[modify_unit]
+				[filter]
+					x,y={X},{Y}
+				[/filter]
+				{TRAIT_INTELLIGENT}
+			[/modify_unit]
+			{VARIABLE bonus_desc "intelligent"}
 			{SET_LABEL {X} {Y} $bonus_desc}
 		[/then]
 	[/if]
@@ -47,20 +104,13 @@
 			x,y={X},{Y}
 		[/have_unit]
 		[then]
-			{RANDOM 1..1}
-			[switch]
-				variable=random
-				[case]
-					value=1
-					[modify_unit]
-						[filter]
-							x,y={X},{Y}
-						[/filter]
-						{TRAIT_QUICK}
-					[/modify_unit]
-					{VARIABLE bonus_desc "quick"}
-				[/case]
-			[/switch]
+			[modify_unit]
+				[filter]
+					x,y={X},{Y}
+				[/filter]
+				{TRAIT_QUICK}
+			[/modify_unit]
+			{VARIABLE bonus_desc "quick"}
 			{SET_LABEL {X} {Y} $bonus_desc}
 		[/then]
 	[/if]
@@ -72,20 +122,13 @@
 			x,y={X},{Y}
 		[/have_unit]
 		[then]
-			{RANDOM 1..1}
-			[switch]
-				variable=random
-				[case]
-					value=1
-					[modify_unit]
-						[filter]
-							x,y={X},{Y}
-						[/filter]
-						{TRAIT_STRONG}
-					[/modify_unit]
-					{VARIABLE bonus_desc "strong"}
-				[/case]
-			[/switch]
+			[modify_unit]
+				[filter]
+					x,y={X},{Y}
+				[/filter]
+				{TRAIT_STRONG}
+			[/modify_unit]
+			{VARIABLE bonus_desc "strong"}
 			{SET_LABEL {X} {Y} $bonus_desc}
 		[/then]
 	[/if]
@@ -97,20 +140,13 @@
 			x,y={X},{Y}
 		[/have_unit]
 		[then]
-			{RANDOM 1..1}
-			[switch]
-				variable=random
-				[case]
-					value=1
-					[modify_unit]
-						[filter]
-							x,y={X},{Y}
-						[/filter]
-						{TRAIT_DEXTROUS}
-					[/modify_unit]
-					{VARIABLE bonus_desc "dextrous"}
-				[/case]
-			[/switch]
+			[modify_unit]
+				[filter]
+					x,y={X},{Y}
+				[/filter]
+				{TRAIT_DEXTROUS}
+			[/modify_unit]
+			{VARIABLE bonus_desc "dextrous"}
 			{SET_LABEL {X} {Y} $bonus_desc}
 		[/then]
 	[/if]
@@ -118,16 +154,16 @@
 
 #define CLEAR_BONUS_LABELS
 	{SET_LABEL 13 10 "(int)"}
-	{SET_LABEL 14 9 "(str)"}
+	{SET_LABEL 14 9 "(pow)"}
 	{SET_LABEL 14 10 "(qui)"}
-	{SET_LABEL 15 10 "(dex)"}
-	{SET_LABEL 12 11 "(dex)"}
-	{SET_LABEL 12 12 "(str)"}
+	{SET_LABEL 15 10 "(exp)"}
+	{SET_LABEL 12 11 "(exp)"}
+	{SET_LABEL 12 12 "(pow)"}
 	{SET_LABEL 13 12 "(qui)"}
 	{SET_LABEL 13 13 "(int)"}
 	{SET_LABEL 15 12 "(qui)"}
-	{SET_LABEL 15 13 "(dex)"}
+	{SET_LABEL 15 13 "(exp)"}
 	{SET_LABEL 16 11 "(int)"}
-	{SET_LABEL 16 12 "(str)"}
+	{SET_LABEL 16 12 "(pow)"}
 #enddef
 
