--- a/orosh/scenarios/3p_Orosh.cfg
+++ b/orosh/scenarios/3p_Orosh.cfg
@@ -1,6 +1,6 @@
-# 3p-Orosh v5.6 (updated for Wesnoth 1.12)
+# 3p-Orosh v6.1 (updated for Wesnoth 1.12)
 # by Dovolente - March 2011
-# by orosh 2014
+# by Zooko, Irby, Elliot, and Graeme in 2014 and 2015
 
 [multiplayer]
 	id=Dov_MP_Orosh
@@ -31,6 +31,7 @@
 		canrecruit=yes
 		controller=human
  		[ai]
+ 			{EXPERIMENTAL_AI}
  			caution=1.5
  			grouping="offensive"
  			[goal]
@@ -132,6 +133,7 @@
 		canrecruit=yes
 		controller=human 
  		[ai]
+ 			{EXPERIMENTAL_AI}
  			caution=1.5
  			grouping="offensive"
  			[goal]
@@ -233,6 +235,7 @@
 		canrecruit=yes
 		controller=human
  		[ai]
+ 			{EXPERIMENTAL_AI}
  			caution=1.5
  			grouping="offensive"
  			[goal]
@@ -341,6 +344,9 @@
 		color_lock=true
 		hidden=yes
 		no_leader=yes
+ 		[ai]
+ 			{EXPERIMENTAL_AI}
+ 	        [/ai]
 	[/side]
 
 	[event]
@@ -360,7 +366,7 @@
 				condition=win
 			[/objective]
 			[note]
-				description=_"At the start of your turn, any of your units may receive a bonus if they are within the castle walls and on the grassy area on your side of the shrine. v5.6.94"
+				description=_"At the start of your turn, any of your units may receive a bonus if they are within the castle walls and on the grassy area on your side of the shrine. v6.1.96"
 			[/note]
 			[note]
 				description=_"Bonuses: strong, intelligent, dextrous, quick"
@@ -457,9 +463,9 @@
 		first_time_only=no
 		{CLEAR_BONUS_LABELS}
 		{INTELLIGENT_EMPOWERMENT 13 10}
-		{STRONG_EMPOWERMENT 14 9}
+		{POWERFUL_EMPOWERMENT 14 9}
 		{QUICK_EMPOWERMENT 14 10}
-		{DEXTROUS_EMPOWERMENT 15 10}
+		{EXPERT_EMPOWERMENT 15 10}
 	[/event]
 
 	[event]
@@ -467,8 +473,8 @@
 		id=side_2_turn
 		first_time_only=no
 		{CLEAR_BONUS_LABELS}
-		{DEXTROUS_EMPOWERMENT 12 11}
-		{STRONG_EMPOWERMENT 12 12}
+		{EXPERT_EMPOWERMENT 12 11}
+		{POWERFUL_EMPOWERMENT 12 12}
 		{QUICK_EMPOWERMENT 13 12}
 		{INTELLIGENT_EMPOWERMENT 13 13}
 	[/event]
@@ -479,9 +485,9 @@
 		first_time_only=no
 		{CLEAR_BONUS_LABELS}
 		{QUICK_EMPOWERMENT 15 12}
-		{DEXTROUS_EMPOWERMENT 15 13}
+		{EXPERT_EMPOWERMENT 15 13}
 		{INTELLIGENT_EMPOWERMENT 16 11}
-		{STRONG_EMPOWERMENT 16 12}
+		{POWERFUL_EMPOWERMENT 16 12}
 	[/event]
 
 	{DOV_WAVE 1 (
@@ -504,19 +510,19 @@
 	{DOV_WAVE 7 (
 		{LAND_A_2 "Walking Corpse"}
 		{LAND_B_1 "Walking Corpse"}
-		{VARIABLE next_wave_turn 10}
+		{VARIABLE next_wave_turn 9}
 		{VARIABLE next_wave_label "Loyalists"}
 	)}
 
-	{DOV_WAVE 10 (
+	{DOV_WAVE 9 (
 		{LAND_B_1 "Mage"}
 		{LAND_B_2 "Spearman"}
 		{LAND_A_2 "Cavalryman"}
-		{VARIABLE next_wave_turn 13}
+		{VARIABLE next_wave_turn 12}
 		{VARIABLE next_wave_label "Northerners"}
 	)}
 
-	{DOV_WAVE 13 (
+	{DOV_WAVE 12 (
 		{LAND_B_2 "Orcish Archer"}
 		{LAND_A_1 "Troll"}
 		{LAND_A_2 "Wolf Rider"}
